<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.servers.SetupServerFragment">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">


            <TextView
                android:id="@+id/server_name_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/server_name" />

            <EditText
                android:id="@+id/server_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:lines="1" />

            <TextView
                android:id="@+id/server_local_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/server_local" />

            <EditText
                android:id="@+id/server_local_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri"
                android:lines="1" />

            <TextView
                android:id="@+id/error_local_url"
                style="@style/warning_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invalid_url"
                android:visibility="gone" />

            <TextView
                android:id="@+id/hdr_server_remote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/server_remote" />

            <EditText
                android:id="@+id/txt_server_remote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri"
                android:lines="1" />

            <TextView
                android:id="@+id/error_remote_url"
                style="@style/warning_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invalid_url"
                android:visibility="gone" />

            <TextView
                android:id="@+id/hdr_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username" />

            <EditText
                android:id="@+id/txt_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1" />

            <TextView
                android:id="@+id/hdr_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password" />

            <EditText
                android:id="@+id/txt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:lines="1" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp"
        android:paddingTop="30dp"
        android:text="@string/back" />

</LinearLayout>
