<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="treehou.se.habit.ui.ServersFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView2"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/item_spacing"
            android:paddingRight="@dimen/item_spacing">


            <android.support.v7.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardElevation="@dimen/item_elevation"
                card_view:cardUseCompatPadding="true"
                card_view:cardBackgroundColor="@color/item_background">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/MenuItemText"
                        android:text="@string/binding"
                        android:id="@+id/lbl_name"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/MenuItemSubText"
                        android:layout_marginBottom="@dimen/short_space"
                        android:lines="1"
                        android:text="@string/author"
                        android:id="@+id/lbl_author"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/DescriptionText"
                        android:text="@string/description"
                        android:id="@+id/lbl_description"/>

                    <TextView
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="2dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/WidgetHeading"
                        android:text="@string/channels"
                        android:id="@+id/hdr_channel"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/lou_thing_types"
                        android:orientation="vertical"
                        android:divider="@drawable/item_divider"
                        android:showDividers="middle|beginning|end"
                        android:layout_gravity="center"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>
</FrameLayout>
