<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorPrimary"
    android:orientation="vertical"
    tools:context="treehou.se.habit.ui.servers.create.myopenhab.CreateMyOpenhabFragment">

    <android.support.v7.widget.CardView
        android:id="@+id/add_my_openhab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/item_margin"
        android:transitionName="card_expand_transition">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/default_item_padding">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:transitionName="icon_expand_transition"
                app:srcCompat="@drawable/ic_openhab" />

            <TextView
                android:id="@+id/button3"
                style="@style/CreateServerText.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/myopenhab"
                android:transitionName="text_transition" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/errorView"
                style="@style/CreateServerText.Error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/item_margin"
                android:visibility="gone"
                android:animateLayoutChanges="true" />

            <EditText
                android:id="@+id/emailView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=".AUTOFILL_HINT_USERNAME"
                style="@style/TextInput"
                android:popupBackground = "#0FFF"
                android:layout_marginBottom="@dimen/item_margin"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/passwordView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=".AUTOFILL_HINT_PASSWORD"
                style="@style/TextInput"
                android:popupBackground = "@color/transparent"
                android:layout_marginBottom="@dimen/item_margin"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/loginView"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>
