<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/item_spacing"
    android:paddingRight="@dimen/item_spacing"
    android:paddingTop="@dimen/item_spacing_vertical">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardElevation="@dimen/item_elevation"
        card_view:cardUseCompatPadding="true"
        card_view:cardBackgroundColor="@color/item_background">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingBottom="@dimen/short_space"
            android:paddingTop="@dimen/short_space">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="@dimen/short_space"
                android:layout_marginLeft="@dimen/short_space"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/MenuItemText"
                    android:text="@string/binding"
                    android:id="@+id/lbl_name"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/MenuItemSubText"
                    android:layout_marginBottom="@dimen/short_space"
                    android:lines="1"
                    android:text="@string/author"
                    android:id="@+id/lbl_author"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/DescriptionText"
                    android:maxLines="6"
                    android:text="@string/description"
                    android:id="@+id/lbl_description"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>