<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="treehou.se.habit.tasker.items.SwitchActionFragment"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView8"
        android:layout_weight="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical"
            tools:context=".ui.control.cells.config.ControllCellFragment">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/item_margin"
                style="?attr/card_style">


                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/item" />

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/itemsSpinner"
                        android:spinnerMode="dropdown"
                        android:entries="@array/empty" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal|numberSigned"
                        android:ems="10"
                        android:hint="@string/value"
                        android:id="@+id/valueText"
                        android:layout_gravity="center_horizontal" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_weight="1">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/min" />

                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:inputType="numberDecimal|numberSigned"
                                android:ems="10"
                                android:text="0"
                                android:hint="@string/min"
                                android:id="@+id/minText"
                                android:layout_gravity="center_horizontal"
                                android:layout_weight="1" />

                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_weight="1">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/max" />

                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:inputType="numberDecimal|numberSigned"
                                android:ems="10"
                                android:text="100"
                                android:hint="@string/max"
                                android:id="@+id/maxText"
                                android:layout_gravity="center_horizontal"
                                android:layout_weight="1" />
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:text="@string/save"
        android:id="@+id/btn_save"
        android:layout_weight="1" />

</LinearLayout>
